# game-prototypes

./: LICENSE
00-dino-jump/: Cargo.toml  README.md  TODO.md
00-dino-jump-2/: Cargo.toml
00-dino-jump-2/src/: main.rs
00-dino-jump/src/: game.rs  main.rs
00-dino-jump/src/game/actors/: dino.rs  mod.rs  obstacle.rs  spawner.rs
01-turret/: Cargo.toml  README.md  TODO.md  checkout-assets.bat  checkout-assets.sh
01-turret/src/: assets_store.rs  entities.rs  main.rs  main.rs.bak  spawner.rs  world.rs
01-turret/src/entities/: laser.rs  missile.rs  monster.rs  turret.rs
01-turret/src/entities/turret/: ai.rs  base.rs  fire_mode.rs  gun.rs  rate_timer.rs  sensor.rs
01-turret/src/spawner/: missile.rs
01-turret/src/turret/: base.rs  gun.rs  mod.rs  sensor.rs
02-spell-it/: .gitignore  Cargo.toml  README.md  TODO.md
02-spell-it/devlog/: combat.md
02-spell-it/redist/: index.html
02-spell-it/src/: game_master.rs  game_state.rs  main.rs  rendering.rs  systems.rs  utils.rs  world.rs  world_definition.rs
02-spell-it/src/combat/: sequence.rs
02-spell-it/src/game_state/: scene.rs  stage.rs
02-spell-it/src/world/: entity.rs  spell.rs
03-sweet-beezness/: Cargo.toml  README.md
03-sweet-beezness/src/: main.rs
03-sweet-beezness/src/states/: mod.rs  splashscreen.rs
