[package]
name = "sweet-beezness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_ecs_ldtk = "0.6.0"
bevy_editor_pls = "0.4.0"

[profile.dev.package."*"]
opt-level = 3
